--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,5 +1,35 @@
 <resources>
 
     <string name="app_name">Gestage</string>
+    <string name="action_settings">Settings</string>
+    <string name="hello_world">Hello world!</string>
+    <string name="connection">Connexion</string>
+    <string name="login">identifiant</string>
+    <string name="password">mot de passe</string>
+    <string name="drawer_open">Slider Menu Opened</string>
+    <string name="drawer_close">Slider Menu Closed</string>
 
+    <!-- Nav Drawer Menu Items -->
+    <string-array name="nav_drawer_items">
+        <item>Accueil</item>
+        <item>Chantiers</item>
+        <item>Heures</item>
+        <item>Frais</item>
+        <item>Outils</item>
+        <item>Déconnexion</item>
+    </string-array>
+
+    <!-- Nav Drawer List Item Icons -->
+    <!-- Keep them in order as the titles are in -->
+    <array name="nav_drawer_icons">
+        <item>@drawable/ic_home</item>
+        <item>@drawable/ic_people</item>
+        <item>@drawable/ic_heure</item>
+        <item>@drawable/ic_frais</item>
+        <item>@drawable/ic_outil</item>
+        <item>@drawable/ic_deconnection</item>
+    </array>
+
+    <!-- Content Description -->
+    <string name="desc_list_item_icon">Item Icon</string>
 </resources>
