--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -12,11 +12,7 @@
     <!-- Nav Drawer Menu Items -->
     <string-array name="nav_drawer_items">
         <item>Accueil</item>
-        <item>Chantiers</item>
-        <item>Heures</item>
-        <item>Frais</item>
-        <item>Outils</item>
-        <item>Déconnexion</item>
+        <item>Stages</item>
     </string-array>
 
     <!-- Nav Drawer List Item Icons -->
@@ -24,10 +20,6 @@
     <array name="nav_drawer_icons">
         <item>@drawable/ic_home</item>
         <item>@drawable/ic_people</item>
-        <item>@drawable/ic_heure</item>
-        <item>@drawable/ic_frais</item>
-        <item>@drawable/ic_outil</item>
-        <item>@drawable/ic_deconnection</item>
     </array>
 
     <!-- Content Description -->
