--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -24,4 +24,5 @@
 
     <!-- Content Description -->
     <string name="desc_list_item_icon">Item Icon</string>
+    <string name="menu">menu</string>
 </resources>
